--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
     Options -Multiviews
     RewriteEngine On
-    RewriteBase /Framework/public
+    RewriteBase /-Portfolio/public
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !f
     RewriteCond %{REQUEST_FILENAME} !\.(css|png)$
