--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,9 +1,9 @@
 <IfModule mod_rewrite.c>
     Options -Multiviews
     RewriteEngine On
-    RewriteBase /-Portfolio/public
+    RewriteBase /Portfolio/public
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !f
+    RewriteCond %{REQUEST_FILENAME} !F
     RewriteCond %{REQUEST_FILENAME} !\.(css|png)$
     RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
 </IfModule>
